@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["hps__fo-optical-connector"].subgroup = "circuit-connection"
+end
